--- a/ui/style.css
+++ b/ui/style.css
@@ -20,3 +20,28 @@ body {
     height: 200px;
 }
 
+.para{
+  max-width: 1000px;
+  margin: 0 auto;
+  font-family: sans-serif;
+  color: rgba(228, 228, 227, 0.77);
+  background: black;
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.link{
+    
+    margin: 0 auto;
+    color: #25ff00;
+}
+
+.linkhome{
+    align-content: center;
+    font-family: cursive;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin: 0 auto;
+}
+
