[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -45,3 +45,9 @@ body {
     margin: 0 auto;
 }
 
+.img{
+    background-color: #fafafa;
+    border-radius: 50%;
+    box-sizing: border-box;
+    overflow: hidden;
+}
