[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .img-medium {
-    height: 200px;
+    margin-left: 37%;
 }
 
 .para{
@@ -52,5 +52,5 @@ body {
     overflow: hidden;
     overflow-x: hidden;
     overflow-y: hidden;
-    max-width: 25%;
+    max-width: 35%;
 }
